--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CucumberAI v2.0</title>
+    <title>CucumberAI</title>
   </head>
   <body style="margin:0;background: #f5f5f5; ">
     <div id="app"></div>
